@@ -380,6 +380,9 @@
 (defgeneric generic-function-lambda-list (generic-function)
   (:method ((gf standard-generic-function))
     (check-generic-function-initialized gf)
+    (when (eq (std-gf-signature gf) (sys::%unbound))
+      (error (TEXT "~S: the lambda-list of ~S is not yet known")
+             'generic-function-lambda-list gf))
     (std-gf-lambda-list gf)))
 (initialize-extended-method-check #'generic-function-lambda-list)
 
@@ -394,6 +397,9 @@
 (defgeneric generic-function-argument-precedence-order (generic-function)
   (:method ((gf standard-generic-function))
     (check-generic-function-initialized gf)
+    (when (eq (std-gf-signature gf) (sys::%unbound))
+      (error (TEXT "~S: the lambda-list of ~S is not yet known")
+             'generic-function-argument-precedence-order gf))
     (let ((argorder (std-gf-argorder gf))
           (lambdalist (std-gf-lambda-list gf)))
       (mapcar #'(lambda (i) (nth i lambdalist)) argorder))))
